force-app/main/default/objects/CP_Project__c/CP_Project__c.object-meta.xml
<CustomObject>
    <label>CP Project</label>
    <nameField>
        <displayFormat>CPP-{00000}</displayFormat>
        <label>CP Project No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CP Projects</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>