force-app/main/default/objects/CP_Project__c/fields/Area_Focus__c.field-meta.xml
<CustomField>
    <fullName>Area_Focus__c</fullName>
    <label>Area Focus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>KDMC</fullName>
            </value>
            <value>
                <fullName>Thane</fullName>
            </value>
            <value>
                <fullName>Central</fullName>
            </value>
            <value>
                <fullName>Navi Mumbai</fullName>
            </value>
            <value>
                <fullName>South Mumbai</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>