force-app/main/default/objects/CP_Project__c/fields/Booking_Count__c.field-meta.xml
<CustomField>
    <fullName>Booking_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Booking Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>