force-app/main/default/objects/CP_Project__c/fields/CP_Account__c.field-meta.xml
<CustomField>
    <fullName>CP_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CP Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>CP Account</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>CP Projects</relationshipLabel>
    <relationshipName>CP_Projects</relationshipName>
    <type>Lookup</type>
</CustomField>