force-app/main/default/objects/CP_Project__c/fields/CP_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>CP_Account_Id__c</fullName>
    <inlineHelpText>It is used for matching duplicate rule</inlineHelpText>
    <label>CP Account Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>