force-app/main/default/objects/CP_Project__c/fields/CP_Accounts__c.field-meta.xml
<CustomField>
    <fullName>CP_Accounts__c</fullName>
    <label>CP Account Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>