force-app/main/default/objects/CP_Project__c/fields/CP_Call_Comment_History__c.field-meta.xml
<CustomField>
    <fullName>CP_Call_Comment_History__c</fullName>
    <label>CP Call Comment History</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>