force-app/main/default/objects/CP_Project__c/fields/CP_Call_Remark_History__c.field-meta.xml
<CustomField>
    <fullName>CP_Call_Remark_History__c</fullName>
    <label>CP Call Remark History</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>