force-app/main/default/objects/CP_Project__c/fields/CP_Category__c.field-meta.xml
<CustomField>
    <fullName>CP_Category__c</fullName>
    <label>CP Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ABC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>