force-app/main/default/objects/CP_Project__c/fields/CP_Meeting_Notification_After_3Hr__c.field-meta.xml
<CustomField>
    <fullName>CP_Meeting_Notification_After_3Hr__c</fullName>
    <label>CP Meeting Notification After 3Hr</label>
    <type>DateTime</type>
</CustomField>