force-app/main/default/objects/CP_Project__c/fields/CP_Project_Owner__c.field-meta.xml
<CustomField>
    <fullName>CP_Project_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CP Project Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>CP Projects</relationshipLabel>
    <relationshipName>CP_Projects</relationshipName>
    <type>Lookup</type>
</CustomField>