force-app/main/default/objects/CP_Project__c/fields/CP_Stage__c.field-meta.xml
<CustomField>
    <fullName>CP_Stage__c</fullName>
    <label>CP Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Prospect</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>