force-app/main/default/objects/CP_Project__c/fields/CP_Sub_Stage__c.field-meta.xml
<CustomField>
    <fullName>CP_Sub_Stage__c</fullName>
    <label>CP Sub Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Booking Active (HP)</fullName>
            </value>
            <value>
                <fullName>Booking Active (LP)</fullName>
            </value>
            <value>
                <fullName>Walk-in Active</fullName>
            </value>
            <value>
                <fullName>Sourcing Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>