force-app/main/default/objects/CP_Project__c/fields/CPP_Unique_Code__c.field-meta.xml
<CustomField>
    <fullName>CPP_Unique_Code__c</fullName>
    <formula>Project__r.Name &amp; &quot;-&quot; &amp; Channel_Partner__r.CP_Unique_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CPP Unique Code</label>
    <type>Text</type>
</CustomField>