force-app/main/default/objects/CP_Project__c/fields/DID_1__c.field-meta.xml
<CustomField>
    <fullName>DID_1__c</fullName>
    <label>DID 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>