force-app/main/default/objects/CP_Project__c/fields/DID_2__c.field-meta.xml
<CustomField>
    <fullName>DID_2__c</fullName>
    <label>DID 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>