force-app/main/default/objects/CP_Project__c/fields/Last_Booking_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Booking_Date__c</fullName>
    <label>Last Booking Date</label>
    <type>Date</type>
</CustomField>