force-app/main/default/objects/CP_Project__c/fields/Last_CP_Meeting_Action_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_CP_Meeting_Action_Date__c</fullName>
    <label>Last CP Meeting Action Date</label>
    <type>DateTime</type>
</CustomField>