force-app/main/default/objects/CP_Project__c/fields/Last_CP_Meeting_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_CP_Meeting_Date__c</fullName>
    <label>Last CP Meeting Date</label>
    <type>Date</type>
</CustomField>