force-app/main/default/objects/CP_Project__c/fields/Last_CP_Meeting_Remarks_History__c.field-meta.xml
<CustomField>
    <fullName>Last_CP_Meeting_Remarks_History__c</fullName>
    <label>Last CP Meeting Remarks History</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>