force-app/main/default/objects/CP_Project__c/fields/Last_CP_Meeting_Status__c.field-meta.xml
<CustomField>
    <fullName>Last_CP_Meeting_Status__c</fullName>
    <label>Last CP Meeting Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>