force-app/main/default/objects/CP_Project__c/fields/Last_Meeting_Call_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Last_Meeting_Call_Remarks__c</fullName>
    <label>Last Meeting Call Remarks</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>