force-app/main/default/objects/CP_Project__c/fields/Last_Meeting_Type__c.field-meta.xml
<CustomField>
    <fullName>Last_Meeting_Type__c</fullName>
    <label>Last Meeting Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>