force-app/main/default/objects/CP_Project__c/fields/Last_Site_Visit_Tagged_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Site_Visit_Tagged_Date__c</fullName>
    <label>Last Site Visit Tagged Date</label>
    <type>Date</type>
</CustomField>