force-app/main/default/objects/CP_Project__c/fields/Other_SPOC_Details__c.field-meta.xml
<CustomField>
    <fullName>Other_SPOC_Details__c</fullName>
    <label>Other SPOC Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>