force-app/main/default/objects/CP_Project__c/fields/Project_Name__c.field-meta.xml
<CustomField>
    <fullName>Project_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Name</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>CP Projects</relationshipLabel>
    <relationshipName>CP_Projects</relationshipName>
    <type>Lookup</type>
</CustomField>