force-app/main/default/objects/CP_Project__c/fields/Purpose_of_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Purpose_of_Meeting__c</fullName>
    <label>Purpose of Meeting</label>
    <length>255</length>
    <type>Text</type>
</CustomField>