force-app/main/default/objects/CP_Project__c/fields/Sourcing_Manager__c.field-meta.xml
<CustomField>
    <fullName>Sourcing_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sourcing Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CP_Projects1</relationshipName>
    <type>Lookup</type>
</CustomField>