force-app/main/default/objects/CP_Project__c/fields/Sourcing_Manager_Name__c.field-meta.xml
<CustomField>
    <fullName>Sourcing_Manager_Name__c</fullName>
    <formula>Owner:User.FirstName + &apos; &apos;+ Owner:User.LastName</formula>
    <inlineHelpText>It is used to show Sourcing Manager Name on Walkin</inlineHelpText>
    <label>Sourcing Manager Name</label>
    <type>Text</type>
</CustomField>