force-app/main/default/objects/CP_Project__c/fields/SPOC_Alternate_Mobile__c.field-meta.xml
<CustomField>
    <fullName>SPOC_Alternate_Mobile__c</fullName>
    <label>SPOC Alternate Mobile</label>
    <type>Phone</type>
</CustomField>