force-app/main/default/objects/CP_Project__c/fields/SPOC_Email__c.field-meta.xml
<CustomField>
    <fullName>SPOC_Email__c</fullName>
    <label>SPOC Email</label>
    <type>Email</type>
</CustomField>