force-app/main/default/objects/CP_Project__c/fields/SPOC_Mobile__c.field-meta.xml
<CustomField>
    <fullName>SPOC_Mobile__c</fullName>
    <label>SPOC Mobile</label>
    <type>Phone</type>
</CustomField>