force-app/main/default/objects/CP_Project__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CP_Account__c</columns>
    <columns>Project__c</columns>
    <columns>SPOC_Name__c</columns>
    <columns>Stage__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>